[project]
name = "shout-subgroup"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "Alrick Brown", email = "alrickab@gmail.com" },
    { name = "Richard Walker", email = "richard.walker.90@gmail.com" },
]
dependencies = [
    "python-telegram-bot==20.8",
    "python-dotenv==1.0.1",
    "SQLAlchemy==2.0.31",
    "psycopg2-binary>=2.9.9",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = [
    "pytest==8.2.2",
    "pytest-asyncio==0.23.7",
    "pytest-xdist>=3.6.1",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/shout_subgroup"]
